Added a button to test Script.js

--- a/popup.html
+++ b/popup.html
@@ -20,5 +20,6 @@
 			<li><a href="https://developer.chrome.com/extensions/devguide" target="_blank">Chrome Dev Guide</a></li>
 		</ul>
 	</div>
+	<button  id="mybutton" input type = "button" style ="display: flex;justify-content: center;text-align: center;">Let's Go!</button>
   </BODY>
 </HTML>
