A few edits here and there

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,9 @@
 		<h1>Random Selection</h1>
 			</p>
 				<br>
-
+					<center>
+					<button  id="mybutton" input type = "button" style ="display: flex;justify-content: center;text-align: center;">Let's Go!</button>
+					</center>
 				<br>
     </div>
 		<br>
@@ -20,6 +22,5 @@
 			<li><a href="https://developer.chrome.com/extensions/devguide" target="_blank">Chrome Dev Guide</a></li>
 		</ul>
 	</div>
-	<button  id="mybutton" input type = "button" style ="display: flex;justify-content: center;text-align: center;">Let's Go!</button>
   </BODY>
 </HTML>
