Allowed it to connect to the background.js file

--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
   <HEAD>
     <title>Random Selection</title>
     <link type="text/css" rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="background.js"></script>
   </HEAD>
   <BODY>
     <div id="content">
