Altered the button name, astetic and added a new option.
I have changed the look slightly and have updated the page to have a capacity for multiple classes

--- a/popup.html
+++ b/popup.html
@@ -11,17 +11,27 @@
 		<h1>Random Selection</h1>
 			</p>
 				<br>
-					<center>
-					<button  id="mybutton" input type = "button" style ="display: flex;justify-content: center;text-align: center;">Let's Go!</button>
-					</center>
+					<div id="line">
+						<select name="List">
+						<option value="List File">List file name</option>
+						<option value="List File1">List file name 1</option>
+						<option value="List File2">List file name 2</option>
+						</select>
+						</div>
+						<div id="line">
+						<button  id="mybutton" input type = "button" style ="display: flex;justify-content: center;text-align: center;">Select</button>
+					</div>
+					<div id="result">
+					
+					</div>
 				<br>
-    </div>
 		<br>
+	</div>
+	<br>
+	<br>
 	<div id="footer">
-		<ul>
-			<li><a href="https://github.com/Fidosodd/RandomSelection" target="_blank">Github</a></li>
-			<li><a href="https://developer.chrome.com/extensions/devguide" target="_blank">Chrome Dev Guide</a></li>
-		</ul>
+			<a href="https://github.com/Fidosodd/RandomSelection" target="_blank">Github</a>
+			<a href="https://developer.chrome.com/extensions/devguide" target="_blank">Chrome Dev Guide</a>
 	</div>
   </BODY>
 </HTML>
