--- a/popup.html
+++ b/popup.html
@@ -13,10 +13,15 @@
 			<br>
 			<center>
 				<div id="lineblock">
-				<select name="List">
-					<option value="List File">List file name</option>
-					<option value="List File1">List file name 1</option>
-					<option value="List File2">List file name 2</option>
+				<select id="list">
+					<option value="class1.txt">Class 1</option>
+					<option value="class2.txt">Class 2</option>
+					<option value="class3.txt">Class 3</option>
+					<option value="class4.txt">Class 4</option>
+					<option value="class5.txt">Class 5</option>
+					<option value="class6.txt">Class 6</option>
+					<option value="class7.txt">Class 7</option>
+					<option value="class8.txt">Class 8</option>
 				</select>
 				</div>
 				<div id="lineblock">
@@ -27,6 +32,7 @@
 			<div class="format" id="line"> Result: </div><span id="result"></span>
 		</h2>
 	</div>
+	<br>
 	<br>
 	<div id="footer">
 			<a href="https://github.com/Fidosodd/RandomSelection" target="_blank">Github</a>
