--- a/popup.html
+++ b/popup.html
@@ -29,7 +29,7 @@
 				</div>
 			</center>
 		<h2>
-			<div class="format" id="line"> Result: </div><span id="result"></span>
+			<div id="line"> Result: </div><span id="result"></span>
 		</h2>
 	</div>
 	<br>
