Switched to px instead of percentages
Switched the formatting to px to make everything uniform.

--- a/popup.html
+++ b/popup.html
@@ -8,13 +8,13 @@
   <BODY>
     <div id="content">
 			<p>
-		<h1>Random Selection</h1>
+		<h1>Student Selector</h1>
 			</p>
 			<br>
 			<center>
 				<div id="lineblock">
 				<select id="list">
-					<option value="class1.txt">Class 1</option>
+					<option value="class1.txt"><h3>Class 1</h3></option>
 					<option value="class2.txt">Class 2</option>
 					<option value="class3.txt">Class 3</option>
 					<option value="class4.txt">Class 4</option>
