Tweaks to the look and cleaning up code
Clean up HTML and CSS and make the name relevent to the topic.

--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,7 @@
 				</select>
 				</div>
 				<div id="lineblock">
-				<button  id="mybutton" input type = "button" style ="display: flex;justify-content: center;text-align: center;">Select</button>
+				<button  id="mybutton" input type = "button">Select</button>
 				</div>
 			</center>
 		<h2>
