Prep for more index work

--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <HTML>
   <HEAD>
     <title>Random Selection</title>
-    <link type="text/css" rel="stylesheet" href="style.css">
+    <link type="text/css" rel="stylesheet" href="extentionStyle.css">
     <script type="text/javascript" src="background.js"></script>
   </HEAD>
   <BODY>
@@ -14,7 +14,7 @@
 			<center>
 				<div id="lineblock">
 				<select id="list">
-					<option value="class1.txt"><h3>Class 1</h3></option>
+					<option value="class1.txt">Class 1</option>
 					<option value="class2.txt">Class 2</option>
 					<option value="class3.txt">Class 3</option>
 					<option value="class4.txt">Class 4</option>
@@ -35,6 +35,7 @@
 	<br>
 	<br>
 	<div id="footer">
+			<a href="#" target="_blank">Reset</a>
 			<a href="https://github.com/Fidosodd/RandomSelection" target="_blank">Github</a>
 			<a href="https://developer.chrome.com/extensions/devguide" target="_blank">Chrome Dev Guide</a>
 	</div>
