--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
-<head>
-</head>
+  <head>
+    <title>Random Selection</title>
+    <link type="text/css" rel="stylesheet" href="indexStyle.css">
+  </head>
 <body>
-	<p> Interview </p>
+  <p> Interview </p>
 </body>
 </html>
