--- a/index.html
+++ b/index.html
@@ -1,9 +1,37 @@
 <html>
   <head>
-    <title>Random Selection</title>
+    <title>Student Selector</title>
     <link type="text/css" rel="stylesheet" href="indexStyle.css">
   </head>
 <body>
-  <p> Interview </p>
+  <div id="header">
+  <p>
+  Student Selector
+  </p>
+  </div>
+  <p> 
+  <h1>Interview</h1> 
+  <h2>
+  We interviewed our client Mrs.Rodeback.
+  </h2>
+  </p>
+  <hr>
+  <p> 
+  <h1>Update to colors, logos, and layout</h1>
+  <h2>
+  Updated the theme and logos to be more friendly.
+  </h2>
+  </p>
+  <hr>
+  <p>
+  <h1>Update to Randomizer and list</h1>
+  <h2>
+  Made the list read vertically.
+  </h2>
+  </p>
+  
+  <div id="footer">
+    <a href="https://github.com/Fidosodd/RandomSelection" target="_blank">Github</a>
+  </div>
 </body>
 </html>
