--- a/popup.html
+++ b/popup.html
@@ -35,7 +35,7 @@
 	<br>
 	<br>
 	<div id="footer">
-			<a href="#" target="_blank">Reset</a>
+			<a href="index.html" target="_blank">Index</a>
 			<a href="https://github.com/Fidosodd/RandomSelection" target="_blank">Github</a>
 			<a href="https://developer.chrome.com/extensions/devguide" target="_blank">Chrome Dev Guide</a>
 	</div>
