added edit button

--- a/popup.html
+++ b/popup.html
@@ -1,14 +1,16 @@
 <!DOCTYPE HTML>
 <HTML>
   <HEAD>
-    <title>Random Selection</title>
+    <title>Student Selector</title>
     <link type="text/css" rel="stylesheet" href="extentionStyle.css">
     <script type="text/javascript" src="background.js"></script>
   </HEAD>
   <BODY>
     <div id="content">
 			<p>
+			<center>
 		<h1>Student Selector</h1>
+			</center>
 			</p>
 			<br>
 			<center>
@@ -25,7 +27,8 @@
 				</select>
 				</div>
 				<div id="lineblock">
-				<button  id="mybutton" input type = "button">Select</button>
+				<button  id="selectButton" input type = "button">Select</button>
+				<button  id="editButton" input type = "button">Edit</button>
 				</div>
 			</center>
 		<h2>
