--- a/edit.html
+++ b/edit.html
@@ -14,26 +14,16 @@
 			</p>
 			<br>
 			<center>
-				<div id="lineblock">
-				<select id="list">
-					<option value="class1.txt">Class 1</option>
-					<option value="class2.txt">Class 2</option>
-					<option value="class3.txt">Class 3</option>
-					<option value="class4.txt">Class 4</option>
-					<option value="class5.txt">Class 5</option>
-					<option value="class6.txt">Class 6</option>
-					<option value="class7.txt">Class 7</option>
-					<option value="class8.txt">Class 8</option>
-				</select>
-				</div>
+				<textarea id="">
+				
+				</textarea>
+			<br>
+			<br>
 				<div id="lineblock">
 				<button  id="selectButton" input type = "button">Select</button>
 				<button  id="editButton" input type = "button">Edit</button>
 				</div>
 			</center>
-		<h2>
-			<div id="line"> Result: </div><span id="result"></span>
-		</h2>
 	</div>
 	<br>
 	<br>
