--- a/edit.html
+++ b/edit.html
@@ -14,7 +14,7 @@
 			</p>
 			<br>
 			<center>
-				<textarea id="">
+				<textarea placeholder="Dexter, Dexter, Dexter" id="listContent">
 				
 				</textarea>
 			<br>
