--- a/edit.html
+++ b/edit.html
@@ -20,8 +20,8 @@
 			<br>
 			<br>
 				<div id="lineblock">
-				<button  id="selectButton" input type = "button">Select</button>
-				<button  id="editButton" input type = "button">Edit</button>
+				<button  id="backButton" input type = "button">Back</button>
+				<button  id="doneButton" input type = "button">Done</button>
 				</div>
 			</center>
 	</div>
