--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
   <h2>9/13:</h2>
   <h3>Added Randomizer Code that chose a value from a list of numbers between 1 and 20.<br>Added Ability to pull class data from a text file within the extension itself.<br>Added the ability to put the data from the text file into a list and choose a random person from that list using the random number generating code.<br></h3>
   <h2>9/17:</h2>
-  <h3>Refined the code that opens the text file.<br>
+  <h3>Refined the code that opens the text file.<br></h3>
+  <h2>9/19:</h2>
+  <h3>Moved student name storage from locally stored text files to chrome storage.<br>Condensed the Randomizer code.<br></h3>
   </p>
   
   <div id="footer">
