--- a/edit.html
+++ b/edit.html
@@ -7,21 +7,19 @@
   </HEAD>
   <BODY>
     <div id="content">
+			<center>
 			<p>
-			<center>
 		<h1>Student Selector</h1>
-			</center>
 			</p>
-			<br>
-			<center>
-				<textarea placeholder="Dexter, Dexter, Dexter" id="listContent">
-				
-				</textarea>
-			<br>
-			<br>
+			<p>
+				List Items
+			</p>
+				<textarea id="listContent" name="list" type="text" placeholder="Carl, Steve, Larry..."></textarea>
+					<br>
+					<br>
 				<div id="lineblock">
-				<button  id="backButton" input type = "button">Back</button>
-				<button  id="doneButton" input type = "button">Done</button>
+					<button  id="backButton" input type = "button">Back</button>
+					<button  id="doneButton" input type = "button">Done</button>
 				</div>
 			</center>
 	</div>
