changed to the css

--- a/edit.html
+++ b/edit.html
@@ -12,11 +12,10 @@
 		<h1>Student Selector</h1>
 			</p>
 			<p>
-				List Items
+				<h3>List Items</h3>
 			</p>
 				<textarea id="listContent" name="list" type="text" placeholder="Carl, Steve, Larry..."></textarea>
-					<br>
-					<br>
+				<br>
 				<div id="lineblock">
 					<button  id="backButton" input type = "button">Back</button>
 					<button  id="doneButton" input type = "button">Done</button>
