--- a/edit.html
+++ b/edit.html
@@ -16,7 +16,7 @@
 			</p>
 				<textarea id="listContent" name="list" type="text" placeholder="Carl, Steve, Larry..."></textarea>
 				<br>
-				<div id="lineblock">
+				<div id="line">
 					<button  id="backButton" input type = "button">Back</button>
 					<button  id="doneButton" input type = "button">Done</button>
 				</div>
