changes to edit page

--- a/edit.html
+++ b/edit.html
@@ -12,7 +12,7 @@
 		<h1>Student Selector</h1>
 			</p>
 			<p>
-				<h3>List Items</h3>
+				<h3>List:<span id="listId"></span></h3>
 			</p>
 				<textarea id="listContent" name="list" type="text" placeholder="Carl, Steve, Larry..."></textarea>
 				<br>
