--- a/popup.html
+++ b/popup.html
@@ -16,14 +16,14 @@
 			<center>
 				<div id="lineblock">
 				<select id="list">
-					<option value="class1.txt">Class 1</option>
-					<option value="class2.txt">Class 2</option>
-					<option value="class3.txt">Class 3</option>
-					<option value="class4.txt">Class 4</option>
-					<option value="class5.txt">Class 5</option>
-					<option value="class6.txt">Class 6</option>
-					<option value="class7.txt">Class 7</option>
-					<option value="class8.txt">Class 8</option>
+					<option value="list1.txt">list 1</option>
+					<option value="list2.txt">list 2</option>
+					<option value="list3.txt">list 3</option>
+					<option value="list4.txt">list 4</option>
+					<option value="list5.txt">list 5</option>
+					<option value="list6.txt">list 6</option>
+					<option value="list7.txt">list 7</option>
+					<option value="list8.txt">list 8</option>
 				</select>
 				</div>
 				<div id="lineblock">
