working on it but it needs help

--- a/popup.html
+++ b/popup.html
@@ -16,14 +16,14 @@
 		<center>
 		<div id="lineblock">
 		<select id="list">
-			<option value="list1.txt">List 1</option>
-			<option value="list2.txt">List 2</option>
-			<option value="list3.txt">List 3</option>
-			<option value="list4.txt">List 4</option>
-			<option value="list5.txt">List 5</option>
-			<option value="list6.txt">List 6</option>
-			<option value="list7.txt">List 7</option>
-			<option value="list8.txt">List 8</option>
+			<option value="list1">List 1</option>
+			<option value="list2">List 2</option>
+			<option value="list3">List 3</option>
+			<option value="list4">List 4</option>
+			<option value="list5">List 5</option>
+			<option value="list6">List 6</option>
+			<option value="list7">List 7</option>
+			<option value="list8">List 8</option>
 		</select>
 		</div>
 		<div id="lineblock">
