--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   <h2>9/17:</h2>
   <h3>Refined the code that opens the text file.<br></h3>
   <h2>9/19:</h2>
-  <h3>Moved student name storage from locally stored text files to chrome storage.<br>Condensed the Randomizer code.<br></h3>
+  <h3>Partially moved student name storage from locally stored text files to chrome storage.<br>Condensed the Randomizer code.<br></h3>
+  <h2>9/25:</h2>
+  <h3>Updated Documentation</h3>  
   </p>
   
   <div id="footer">
