--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </p>
   
   <div id="footer">
-    <a href="https://github.com/Fidosodd/RandomSelection" target="_blank">Github</a>
+    <a href="https://github.com/Fidosodd/RandomSelection" target="_blank" style="text-size:2em;">Github</a>
   </div>
 </body>
 </html>
