--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
   <head>
     <title>Student Selector</title>
     <link type="text/css" rel="stylesheet" href="indexStyle.css">
+    <style>
+      a:link {
+         text-size:2em
+      }
+    </style>
   </head>
 <body>
   <div id="header">
@@ -36,7 +41,7 @@
   </p>
   
   <div id="footer">
-    <a href="https://github.com/Fidosodd/RandomSelection" target="_blank" style="text-size:2em;">Github</a>
+    <a href="https://github.com/Fidosodd/RandomSelection" target="_blank">Github</a>
   </div>
 </body>
 </html>
