--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link type="text/css" rel="stylesheet" href="indexStyle.css">
     <style>
       a:link {
-         text-size:2em
+         font-size:1.5em
       }
     </style>
   </head>
