--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
   <h2>9/17:</h2>
   <h3>Refined the code that opens the text file.<br></h3>
   <h2>9/19:</h2>
-  <h3>Partially moved student name storage from locally stored text files to chrome storage.<br>Condensed the Randomizer code.<br></h3>
+  <h3>Partially moved student name storage from locally stored text files to chrome storage.<br>Condensed the Randomizer code.<br>Began work on an input page in which the user could input the names of their students to randomize.<br></h3>
+  <h2>9/21:</h2>
+  <h3>Continued work on Chrome Storage.<br>Finished the input page.<br></h3>
   <h2>9/25:</h2>
-  <h3>Updated Documentation</h3>  
+  <h3>Updated Documentation.<br>Finished work on Chrome Storage.<br>Created promotional video.<br></h3>    
   </p>
   
   <div id="footer">
