Added the Interview

--- a/index.html
+++ b/index.html
@@ -14,11 +14,34 @@
   Student Selector
   </p>
   </div>
+  <p>
+  <h1>Overview of the Extension</h1> 
+  <h2>
+  The Student Selector Chrome Extension allows users to get a random name or value from a list they enter. This extension is intended for teachers who want to select a student randomly. Features of this extension are that users can input up to eight lists of names (8 periods), select any of those lists in which to pull a name from, and pull a random name from those lists.
+  </h2>
+  </p>
+  <hr>
   <p> 
   <h1>Interview</h1> 
   <h2>
-  We interviewed our client Mrs.Rodeback.
+  We interviewed our client Mrs.Rodeback. This is how the interview went:
   </h2>
+  <h3>Colin: In our project, we have to meet the client's needs so what would you want in this product?<br>
+  Client: I want the product to definitely be random. I want it to be actually random instead of potentially selecting the same student over and over again. I would also like the baility to decline student names.<br>
+  Colin: What do you mean?<br>
+  Client: Well, I have a couple students with special needs that I'd like to protect because I know that they don't always feel comfortable.<br>
+  Colin: So it could be like a list that you put in that includes whatever names you want to have. You could take kids out, put kids in multiple times.<br>
+  Client: I like that. I'd like to have some degree of control. It would also be cool if it could retain the data, so I could see how much a student has been selected.<br>
+  Colin: Anything you'd else you like? I know you have multiple classes and you'd lke to be able to select from among those classes.<br>
+  Client: Each teacher has around 5-6 classes and I'd like those classes to be distinctly seperated.<br>
+  Colin: Great, I think we have all we need, thank you.<br>
+
+  </h3>
+  </p>
+  <hr>
+  <p> 
+  <h1>Flowchart</h1> 
+  <!--<img src=""> -->
   </p>
   <hr>
   <p> 
