--- a/edit.html
+++ b/edit.html
@@ -17,8 +17,8 @@
 			<textarea id="listContent" name="list" type="text" placeholder="Carl, Steve, Larry..."></textarea>
 			<br>
 		<div id="line">
-			<button  id="backButton" input type = "button">Back</button>
-			<button  id="doneButton" input type = "button">Done</button>
+			<a href="popup.html"><button  id="backButton" type = "button">Back</button></a>
+			<a href="popup.html"><button  id="doneButton" type = "button">Done</button></a>
 		</div>
 		</center>
 	</div>
