--- a/popup.html
+++ b/popup.html
@@ -27,8 +27,8 @@
 		</select>
 		</div>
 		<div id="lineblock">
-			<button  id="selectButton" input type = "button">Select</button>
-			<button  id="editButton" input type = "button">Edit</button>
+			<button  id="selectButton" type = "button">Select</button>
+			<a href="edit.html"><button  id="editButton" type = "button">Edit</button></a>
 		</div>
 		</center>
 		<h2>
@@ -36,7 +36,7 @@
 		</h2>
 	</div>
 	<div id="footer">
-		<a href="edit.html" target="_blank">Index</a>
+		<a href="index.html" target="_blank">Index</a>
 		<a href="https://github.com/Fidosodd/RandomSelection" target="_blank">Github</a>
 		<a href="https://developer.chrome.com/extensions/devguide" target="_blank">Chrome Dev Guide</a>
 	</div>
