--- a/edit.html
+++ b/edit.html
@@ -18,7 +18,7 @@
 			<br>
 		<div id="line">
 			<a href="popup.html"><button  id="backButton" type = "button">Back</button></a>
-			<a href="popup.html"><button  id="doneButton" type = "button">Done</button></a>
+			<a href="popup.html"><button  id="saveButton" type = "button">Save</button></a>
 		</div>
 		</center>
 	</div>
