--- a/edit.html
+++ b/edit.html
@@ -3,7 +3,6 @@
   <HEAD>
     <title>Student Selector</title>
     <link type="text/css" rel="stylesheet" href="extentionStyle.css">
-    <script type="text/javascript" src="background.js"></script>
   </HEAD>
   <BODY>
     <div id="content">
@@ -12,7 +11,7 @@
 			<h1>Student Selector</h1>
 		</p>
 		<p>
-			<h3>List:<span id="listId"></span></h3>
+			<h3>List:</h3><span id="listId"></span>
 		</p>
 			<textarea id="listContent" name="list" type="text" placeholder="Carl, Steve, Larry..."></textarea>
 			<br>
