--- a/edit.html
+++ b/edit.html
@@ -3,6 +3,7 @@
   <HEAD>
     <title>Student Selector</title>
     <link type="text/css" rel="stylesheet" href="extentionStyle.css">
+    <script src="storage.js"></script>
   </HEAD>
   <BODY>
     <div id="content">
@@ -24,7 +25,6 @@
 	<div id="footer">
 		<a href="index.html" target="_blank">Index</a>
 		<a href="https://github.com/Fidosodd/RandomSelection" target="_blank">Github</a>
-		<a href="https://developer.chrome.com/extensions/devguide" target="_blank">Chrome Dev Guide</a>
 	</div>
   </BODY>
 </HTML>
