--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
   <HEAD>
     <title>Student Selector</title>
     <link type="text/css" rel="stylesheet" href="extentionStyle.css">
+    <script src="random.js"></script>
   </HEAD>
   <BODY>
     <div id="content">
@@ -14,7 +15,7 @@
 		<br>
 		<center>
 		<div id="lineblock">
-		<select id="list">
+		<select id="listSelect">
 			<option value="list1">List 1</option>
 			<option value="list2">List 2</option>
 			<option value="list3">List 3</option>
@@ -37,7 +38,6 @@
 	<div id="footer">
 		<a href="index.html" target="_blank">Index</a>
 		<a href="https://github.com/Fidosodd/RandomSelection" target="_blank">Github</a>
-		<a href="https://developer.chrome.com/extensions/devguide" target="_blank">Chrome Dev Guide</a>
-	</div>
+  </div>
   </BODY>
 </HTML>
