--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,7 @@
 		<center>
 		<div id="lineblock">
 		<select id="listSelect">
+      <option value="" disabled Selected>Select List</option>
 			<option value="list1">List 1</option>
 			<option value="list2">List 2</option>
 			<option value="list3">List 3</option>
