--- a/edit.html
+++ b/edit.html
@@ -25,7 +25,7 @@
 		</select>
     <button  id="editButton" type = "button">Edit</button>
 		</p>
-			<textarea id="listContent" type="text" placeholder="Carl, Steve, Larry..."></textarea>
+			<textarea id="listContent" placeholder="Carl, Steve, Larry..."></textarea>
 			<br>
 		<div id="line">
 			<a href="popup.html"><button  id="backButton" type = "button">Back</button></a>
