--- a/edit.html
+++ b/edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <HTML>
   <HEAD>
-    <title>Student Selector</title>
+    <title>Randomizer</title>
     <link type="text/css" rel="stylesheet" href="extentionStyle.css">
     <script src="storage.js"></script>
   </HEAD>
@@ -9,7 +9,7 @@
     <div id="content">
 		<center>
 		<p>
-			<h1>Student Selector</h1>
+			<h1>Randomizer</h1>
 		</p>
 		<p>
 	  <select id="listSelect">
@@ -24,18 +24,17 @@
 			<option value="list8">List 8</option>
 		</select>
     <button  id="editButton" type = "button">Edit</button>
+    <a href="popup.html"><button  id="saveButton" type = "button">Save</button></a>
 		</p>
-			<textarea id="listContent" placeholder="Carl, Steve, Larry..."></textarea>
+			<textarea id="listContent" placeholder="Janette, Steve, Alex..."></textarea>
 			<br>
-		<div id="line">
-			<a href="popup.html"><button  id="backButton" type = "button">Back</button></a>
-			<a href="popup.html"><button  id="saveButton" type = "button">Save</button></a>
-		</div>
 		</center>
 	</div>
 	<div id="footer">
-		<a href="index.html" target="_blank">Index</a>
-		<a href="https://github.com/Fidosodd/RandomSelection" target="_blank">Github</a>
+  |<a href="popup.html"> Back</a>
+  |<a href="index.html" target="_blank"> Index</a>
+  |<a href="https://github.com/Fidosodd/RandomSelection" target="_blank"> Github</a>
+  |
 	</div>
   </BODY>
 </HTML>
