--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <HTML>
   <HEAD>
-    <title>Student Selector</title>
+    <title>Randomizer</title>
     <link type="text/css" rel="stylesheet" href="extentionStyle.css">
     <script src="random.js"></script>
   </HEAD>
@@ -9,12 +9,10 @@
     <div id="content">
 		<p>
 		<center>
-			<h1>Student Selector</h1>
+			<h1>Randomizer</h1>
 		</center>
 		</p>
-		<br>
 		<center>
-		<div id="lineblock">
 		<select id="listSelect">
       <option value="" disabled Selected>Select List</option>
 			<option value="list1">List 1</option>
@@ -26,19 +24,17 @@
 			<option value="list7">List 7</option>
 			<option value="list8">List 8</option>
 		</select>
-		</div>
-		<div id="lineblock">
 			<button  id="selectButton" type = "button">Select</button>
 			<a href="edit.html"><button  id="editButton" type = "button">Edit</button></a>
-		</div>
 		</center>
 		<h2>
 			<div id="line"> Result: </div><span id="result"></span>
 		</h2>
 	</div>
 	<div id="footer">
-		<a href="index.html" target="_blank">Index</a>
-		<a href="https://github.com/Fidosodd/RandomSelection" target="_blank">Github</a>
+		|<a href="index.html" target="_blank"> Index</a>
+		|<a href="https://github.com/Fidosodd/RandomSelection" target="_blank"> Github</a>
+    |
   </div>
   </BODY>
 </HTML>
