--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>
     <h1>Overview of the Extension</h1> 
     <h2>
-      The Randomizer Chrome Extension allows users to get a random name or value from a list they enter. This extension is intended for teachers who want to select a student randomly. Features of this extension are that users can input up to eight lists of names (8 periods), select any of those lists in which to pull a name from, and pull a random name from those lists.
+      The Randomizer Chrome Extension allows users to get a random item from a list they enter. This extension is intended for teachers who want to select a student randomly however it can be used for anything. Features of this extension are that users can input up to six lists of items (6 classes per teacher in our school), select any of those lists in which to pull an item from, and pull a random item from that list.
     </h2>
     </p>
   <hr>
@@ -23,12 +23,12 @@
     </h2>
     <h3>
           Colin: In our project, we have to meet the client's needs so what would you want in this product?
-      <br>Client: I want the product to definitely be random. I want it to be actually random instead of potentially selecting the same student over and over again. I would also like the baility to decline student names.
+      <br>Client: I want the product to definitely be random. I want it to be actually random instead of potentially selecting the same student over and over again. I would also like the ability to decline student names.
       <br>Colin: What do you mean?
       <br>Client: Well, I have a couple students with special needs that I'd like to protect because I know that they don't always feel comfortable.
       <br>Colin: So it could be like a list that you put in that includes whatever names you want to have. You could take kids out, put kids in multiple times.
       <br>Client: I like that. I'd like to have some degree of control. It would also be cool if it could retain the data, so I could see how much a student has been selected.
-      <br>Colin: Anything you'd else you like? I know you have multiple classes and you'd lke to be able to select from among those classes.
+      <br>Colin: Anything you'd else you like? I know you have multiple classes and you'd like to be able to select from among those classes.
       <br>Client: Each teacher has around 5-6 classes and I'd like those classes to be distinctly seperated.
       <br>Colin: Great, I think we have all we need, thank you.
     </h3>
@@ -39,25 +39,42 @@
     <!--<img src=""> -->
     </p>
   <hr>
-    <p> 
-    <h1>Update to colors, logos, and layout</h1>
-    <h2>
-      Updated the theme and logos to be more friendly.
-    </h2>
-    </p>
-  <hr>
     <p>
     <h1>Updates to Randomizer and list</h1>
     <h2>9/13:</h2>
-    <h3>Added Randomizer Code that chose a value from a list of numbers between 1 and 20.<br>Added Ability to pull class data from a text file within the extension itself.<br>Added the ability to put the data from the text file into a list and choose a random person from that list using the random number generating code.<br></h3>
+    <h3>
+      Added Randomizer Code that chose a value from a list of numbers between 1 and 20.
+      <br>Added Ability to pull class data from a text file within the extension itself.
+      <br>Added the ability to put the data from the text file into a list and choose a random person from that list using the random number generating code.
+      <br>
+    </h3>
     <h2>9/17:</h2>
-    <h3>Refined the code that opens the text file.<br></h3>
+    <h3>
+      Refined the code that opens the text file.
+      <br>Added a user interface.
+      <br>
+    </h3>
     <h2>9/19:</h2>
-    <h3>Partially moved student name storage from locally stored text files to chrome storage.<br>Condensed the Randomizer code.<br>Began work on an input page in which the user could input the names of their students to randomize.<br></h3>
+    <h3>
+      Partially moved student name storage from locally stored text files to chrome storage.
+      <br>Condensed the Randomizer code.
+      <br>Began work on an input page in which the user could input the names of their students to randomize.
+      <br>
+    </h3>
     <h2>9/21:</h2>
-    <h3>Continued work on Chrome Storage.<br>Finished the input page.<br></h3>
+    <h3>
+      Continued work on Chrome Storage.
+      <br>Finished the input page.
+      <br>
+    </h3>
     <h2>9/25:</h2>
-    <h3>Updated Documentation.<br>Finished work on Chrome Storage.<br>Created promotional video.<br></h3>    
+    <h3>
+      Updated Documentation.
+      <br>Finished work on Chrome Storage.
+      <br>Finished the user interface for input and output.
+      <br>Created promotional video.
+      <br>
+    </h3>    
     </p>
   <footer>
     <a href="https://github.com/Fidosodd/RandomSelection" target="_blank">Github</a>
