--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <HTML>
   <HEAD>
-    <title>Randomizer</title>
+    <title>List Randomizer</title>
     <link type="text/css" rel="stylesheet" href="extentionStyle.css">
     <script src="random.js"></script>
   </HEAD>
@@ -9,7 +9,7 @@
     <div id="content">
     <center>
     <p>
-      <h1>Randomizer</h1>
+      <h1>List Randomizer</h1>
     </p>
     <select id="listSelect">
       <option value="" disabled Selected>Select List</option>
