--- a/popup.html
+++ b/popup.html
@@ -21,7 +21,7 @@
       <option value="list6">List 6</option>
     </select>
     <button  id="selectButton" type = "button">Select</button>
-    <button  id="editButton" type = "button">Edit</button>
+    <a href="edit.html"><button  id="editButton" type = "button">Edit</button></a>
     </center>
     <h2>
       <div id="line"> Result: </div><span id="result"></span>
