WORKS BETTER FORMATTING FIXES

--- a/popup.html
+++ b/popup.html
@@ -9,27 +9,26 @@
     <div id="content">
     <center>
     <p>
-      <h1>List Randomizer</h1>
+      <h1>LIST RANDOMIZER</h1>
     </p>
     <select id="listSelect">
-      <option value="" disabled Selected>Select List</option>
-      <option value="list1">List 1</option>
-      <option value="list2">List 2</option>
-      <option value="list3">List 3</option>
-      <option value="list4">List 4</option>
-      <option value="list5">List 5</option>
-      <option value="list6">List 6</option>
+      <option value="list1">LIST 1</option>
+      <option value="list2">LIST 2</option>
+      <option value="list3">LIST 3</option>
+      <option value="list4">LIST 4</option>
+      <option value="list5">LIST 5</option>
+      <option value="list6">LIST 6</option>
     </select>
-    <button  id="selectButton" type = "button">Select</button>
-    <a href="edit.html"><button  id="editButton" type = "button">Edit</button></a>
+    <button  id="selectButton" type = "button">PICK</button>
+    <a href="edit.html"><button  id="editButton" type = "button">EDIT</button></a>
     </center>
     <h2>
-      <div id="line"> Result: </div><span id="result"></span>
+      <div id="line"> RESULT: </div><span id="result"></span>
     </h2>
     </div>
     <div id="footer">
-      |<a href="index.html" target="_blank"> Index</a>
-      |<a href="https://github.com/Fidosodd/RandomSelection" target="_blank"> Github</a>
+      |<a href="index.html" target="_blank"> INDEX</a>
+      |<a href="https://github.com/Fidosodd/RandomSelection" target="_blank"> GITHUB</a>
       |
     </div>
   </BODY>
