more updates (version 1.2)

--- a/edit.html
+++ b/edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <HTML>
   <HEAD>
-    <title>List Randomizer</title>
+    <title>LIST RANDOMIZER</title>
     <link type="text/css" rel="stylesheet" href="extentionStyle.css">
     <script src="storage.js"></script>
   </HEAD>
@@ -9,19 +9,19 @@
     <div id="content">
       <center>
       <p>
-        <h1>List Randomizer</h1>
+        <h1>LIST RANDOMIZER</h1>
       </p>
       <textarea id="listContent" placeholder="Janette, Steve, Alex..."></textarea>
       <p>
-        <a href="popup.html"><button  id="backButton" type = "button">Back</button></a>
-        <a href="popup.html"><button  id="saveButton" type = "button">Save</button></a>
+        <a href="popup.html"><button  id="backButton" type = "button">BACK</button></a>
+        <a href="popup.html"><button  id="saveButton" type = "button">SAVE</button></a>
       </p>
       <br>
       </center>
     </div>
     <div id="footer">
-      |<a href="index.html" target="_blank"> Index</a>
-      |<a href="https://github.com/Fidosodd/RandomSelection" target="_blank"> Github</a>
+      |<a href="index.html" target="_blank"> INDEX</a>
+      |<a href="https://github.com/Fidosodd/RandomSelection" target="_blank"> GITHUB</a>
       |
     </div>
   </BODY>
