--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <HTML>
   <HEAD>
-    <title>List Randomizer</title>
+    <title>LIST RANDOMIZER</title>
     <link type="text/css" rel="stylesheet" href="extentionStyle.css">
     <script src="random.js"></script>
   </HEAD>
