--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p> 
     <h1>Interview</h1> 
     <h2>
-      We interviewed our client Mrs.Rodeback. This is how the interview went:
+      We interviewed our client Mrs. Highway. This is how the interview went:
     </h2>
     <h3>
           Colin: In our project, we have to meet the client's needs so what would you want in this product?
