added back 2 more lists
added two more lists

--- a/popup.html
+++ b/popup.html
@@ -18,6 +18,8 @@
       <option value="list4">LIST 4</option>
       <option value="list5">LIST 5</option>
       <option value="list6">LIST 6</option>
+	  <option value="list7">LIST 7</option>
+	  <option value="list8">LIST 8</option>
     </select>
     <button  id="selectButton" type = "button">PICK</button>
     <a href="edit.html"><button  id="editButton" type = "button">EDIT</button></a>
