--- a/edit.html
+++ b/edit.html
@@ -11,7 +11,7 @@
       <p>
         <h1>LIST RANDOMIZER</h1>
       </p>
-      <textarea id="listContent" placeholder="Janette, Steve, Alex..."></textarea>
+      <textarea id="listContent" placeholder="one list item per line"></textarea>
       <p>
         <a href="popup.html"><button  id="backButton" type = "button">BACK</button></a>
         <a href="popup.html"><button  id="saveButton" type = "button">SAVE</button></a>
