--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
-<HTML>
-  <HEAD>
+<html>
+  <head>
     <title>LIST RANDOMIZER</title>
     <link type="text/css" rel="stylesheet" href="extentionStyle.css">
     <script src="random.js"></script>
-  </HEAD>
-  <BODY>
+  </head>
+  <body>
     <div id="content">
     <center>
     <p>
@@ -21,8 +21,8 @@
 	  <option value="list7">LIST 7</option>
 	  <option value="list8">LIST 8</option>
     </select>
-    <button  id="selectButton" type = "button">PICK</button>
-    <a href="edit.html"><button  id="editButton" type = "button">EDIT</button></a>
+    <button  id="selectButton" type="button">PICK</button>
+    <a href="edit.html"><button  id="editButton" type="button">EDIT</button></a>
     </center>
     <h2>
       <div id="line"> RESULT: </div><span id="result"></span>
@@ -33,5 +33,5 @@
       |<a href="https://github.com/Fidosodd/RandomSelection" target="_blank"> GITHUB</a>
       |
     </div>
-  </BODY>
-</HTML>
+  </body>
+</html>
