--- a/edit.html
+++ b/edit.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
-<HTML>
-  <HEAD>
+<html>
+  <head>
     <title>LIST RANDOMIZER</title>
     <link type="text/css" rel="stylesheet" href="extentionStyle.css">
     <script src="storage.js"></script>
-  </HEAD>
-  <BODY>
+  </head>
+  <body>
     <div id="content">
       <center>
       <p>
@@ -13,8 +13,8 @@
       </p>
       <textarea id="listContent" placeholder="one list item per line"></textarea>
       <p>
-        <a href="popup.html"><button  id="backButton" type = "button">BACK</button></a>
-        <a href="popup.html"><button  id="saveButton" type = "button">SAVE</button></a>
+        <a href="popup.html"><button  id="backButton" type="button">BACK</button></a>
+        <a href="popup.html"><button  id="saveButton" type="button">SAVE</button></a>
       </p>
       <br>
       </center>
@@ -24,5 +24,5 @@
       |<a href="https://github.com/Fidosodd/RandomSelection" target="_blank"> GITHUB</a>
       |
     </div>
-  </BODY>
-</HTML>
+  </body>
+</html>
